samples/_failures_safe/1761045071_f51176_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69b03615.c: In function ‘main’:
./samples/SAFE/__tmp_69b03615.c:161:5: error: ‘decompress’ undeclared (first use in this function); did you mean ‘decompressed’?
  161 |     decompress
      |     ^~~~~~~~~~
      |     decompressed
./samples/SAFE/__tmp_69b03615.c:161:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_69b03615.c:161:15: error: expected ‘;’ at end of input
  161 |     decompress
      |               ^
      |               ;
./samples/SAFE/__tmp_69b03615.c:161:5: error: expected declaration or statement at end of input
  161 |     decompress
      |     ^~~~~~~~~~
